--- a/client/src/assets/stylesheets/containers/footer.scss
+++ b/client/src/assets/stylesheets/containers/footer.scss
@@ -1,1 +1,9 @@
 @import "../base.scss";
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3rem; /* Footer height */
+  background-color: $dark-blue;
+}
