--- a/client/src/assets/stylesheets/containers/layout.scss
+++ b/client/src/assets/stylesheets/containers/layout.scss
@@ -1,1 +1,10 @@
 @import "../base.scss";
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 3rem; /* Footer height */
+}
