--- a/client/src/assets/stylesheets/containers/navbar.scss
+++ b/client/src/assets/stylesheets/containers/navbar.scss
@@ -1,7 +1,7 @@
 @import "../base.scss";
 
 #header {
-  background-color: $dark-blue;
+  background-color: $purple;
   border-bottom: 5px solid $brown;
 }
 
