--- a/client/src/assets/stylesheets/common.scss
+++ b/client/src/assets/stylesheets/common.scss
@@ -12,7 +12,10 @@ body {
 }
 
 body {
+  position: absolute;
   font-family: "Noto Sans JP", sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 .card {
@@ -21,4 +24,8 @@ body {
 
 button:disabled {
   cursor: not-allowed;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2) !important;
 }
