--- a/client/src/assets/stylesheets/partials/_variables.scss
+++ b/client/src/assets/stylesheets/partials/_variables.scss
@@ -1,5 +1,5 @@
-$brown: #c9ae72;
-$dark-brown: #977938;
+$brown: #e1ad01;
+$dark-brown: #aa8406;
 $yellow: #feef3d;
 $dark-blue: #151a20;
 $grey: #f1f3f5;
@@ -7,3 +7,5 @@ $white: #fff;
 $gray: #888888;
 $red: #ff0000;
 $black: #000;
+$green: #0b8b60;
+$purple: #421f4c;
